--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NestPractice",
+  "name": "nest-practice",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,9 +21,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.0",
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/platform-express": "^9.0.0",
+    "apollo-server": "^3.11.1",
+    "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
